# ctm-report-preview

./: .gitignore  README.md  build_pdf.py  preview.py  pyproject.toml
data/: patient_data_template.xlsx
data/mock/: general.json  matches.json  methods.json  other_matches.json  patient.json  reports.json  sample_match.json
data/raw/: amc-trials.yaml  sparrow-trials.yaml
scripts/: make_template.py
src/ctm/: fetch_cli.py  mm_cli.py  report_cli.py
src/ctm/reports/: builder.py
src/ctm/schemas/matchminer/: __init__.py  clinical_trial.py  patient.py
src/ctm/schemas/processed/: models.py
src/ctm/schemas/raw/: __init__.py  models.py  normalized.py
src/ctm/schemas/trialmatchai/: __init__.py  clinical_trial.py  patient.py
src/ctm/transformers/: amc_xml_to_raw.py  ctgov_to_raw.py  excel_reader.py  normalize_manual.py  process_ct_data.py  process_patient_general.py  process_patient_genetic.py  raw_amc_to_ctml.py  raw_ctgov_to_ctml.py  to_matchminer.py
static/: report.css
templates/: _abbreviations.html  _ctg_matches.html  _disclaimer.html  _methods.html  _patient_detail.html  _primary_match.html  _regional_matches.html  report.html
tests/: test_builder.py  test_store.py  test_transformers.py
tests/fixtures/: amc_trials_sample.xml
